# law_agent

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: executor.py  state.py
app/agent/tools/: case.py
app/api/: deps.py
app/api/v1/endpoints/: chat.py
app/core/: config.py  exceptions.py  handlers.py  logging.py  status_code.py  stream_utils.py
app/db/: redis.py  session.py
app/models/: chat.py
app/schemas/request/: chat.py
app/schemas/response/: base.py  stream.py
app/services/: chat.py
test/agent/: chat.py
test/http/: test_main.http
