[project]
name = "law-rag-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "limuting",email = "limuting233@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langchain-redis (>=0.2.5,<0.3.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.1.0,<8.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.2,<4.0.0)",
    "psycopg-binary (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
